[gd_scene load_steps=8 format=3 uid="uid://cr3bfvty8pd6r"]

[ext_resource type="Script" path="res://scenes/canvas.gd" id="1_5g1xh"]
[ext_resource type="FontFile" uid="uid://dhtnwb6e5xkub" path="res://Fonts/PixelOperator8-Bold.ttf" id="1_n3ski"]
[ext_resource type="Texture2D" uid="uid://c6htnlxtjkvkp" path="res://sprites/coin_ui.png" id="2_s5i2w"]
[ext_resource type="Script" path="res://Scripts/complete_level.gd" id="4_wd2ke"]

[sub_resource type="ImageTexture" id="ImageTexture_yfmmy"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r6ycv"]
texture = SubResource("ImageTexture_yfmmy")
texture_margin_left = 12.0
texture_margin_top = 12.0
texture_margin_right = 12.0
texture_margin_bottom = 12.0
modulate_color = Color(0, 0, 0, 0.662745)

[sub_resource type="SystemFont" id="SystemFont_2f4q4"]
font_names = PackedStringArray("Impact")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5g1xh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.06079, 0.949324)
size_flags_horizontal = 4
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_s5i2w")
expand_mode = 2

[node name="score_label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.771741, 0.618926, 0.277492, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.769574, 0.91091, 0.994381, 1)
theme_override_fonts/font = ExtResource("1_n3ski")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_r6ycv")
text = "10"

[node name="CompleteLevel" type="CanvasLayer" parent="."]
script = ExtResource("4_wd2ke")

[node name="Panel" type="Panel" parent="CompleteLevel"]
offset_left = 45.0
offset_top = 17.0
offset_right = 754.0
offset_bottom = 400.0
scale = Vector2(1.48, 1.68)

[node name="MarginContainer" type="MarginContainer" parent="CompleteLevel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CompleteLevel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="CompleteLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_2f4q4")
theme_override_font_sizes/font_size = 100
text = "LEVEL COMPLETED!"

[node name="Play_btn" type="Button" parent="CompleteLevel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 98.39)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_n3ski")
theme_override_font_sizes/font_size = 32
text = "NEXT LEVEL"

[node name="Quit_btn" type="Button" parent="CompleteLevel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 98.39)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_n3ski")
theme_override_font_sizes/font_size = 32
text = "QUIT"

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="CompleteLevel/MarginContainer/VBoxContainer/Play_btn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="CompleteLevel/MarginContainer/VBoxContainer/Quit_btn" to="." method="_on_quit_btn_pressed"]
